--- a/weather/templates/weather/main.html
+++ b/weather/templates/weather/main.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Weather App</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="{% static 'css/main.css' %}" rel="stylesheet">
 </head>
 <body>
@@ -13,14 +14,25 @@
 <main class="main-container">
 
   <div class="location-and-date">
-    <h1 class="location-and-date__location">{{address}}</h1>
-    <div>{{date}}</div>
+    <div class="header-holder">
+      <h1 class="location-and-date__location">{{address}}</h1>
+      {{date}}
+    </div>
+    <div class="searchbar-holder">
+      <div class="search-container">
+        <form action="{% url 'search-result' %}" method="post">
+          {% csrf_token %}
+          <input type="text" placeholder="Search.." name="search" value = {{address}}>
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+      </div>
+    </div>
   </div>
-
+ 
 
   <div class="current-temperature">
     <div class="current-temperature__icon-container">
-      <img src="{% static 'icons/mostly-sunny.svg' %}" class="current-temperature__icon" alt="">
+      <img src= {{current_weather_desc_small}} class="current-temperature__icon" alt="">
     </div>
     <div class="current-temperature__content-container">
       <div class="current-temperature__value">{{current_temp}}&deg;</div>
@@ -39,8 +51,8 @@
     <div>
       <div class="current-stats__value">{{wind_speed}}mph</div>
       <div class="current-stats__label">Wind</div>
-      <div class="current-stats__value">{{rain_chances}}%</div>
-      <div class="current-stats__label">Rain</div>
+      <div class="current-stats__value">{{uv_index}}</div>
+      <div class="current-stats__label">UV Index</div>
     </div>
     {% comment %} <div>
       <div class="current-stats__value">05:27</div>
@@ -50,6 +62,8 @@
     </div> {% endcomment %}
   </div>
 
+  <!-- hourly weather card -->
+
   {% comment %} <div class="weather-by-hour">
     <h2 class="weather-by-hour__heading">Today's weather</h2>
     <div class="weather-by-hour__container">
@@ -58,42 +72,15 @@
         <img src="{% static 'icons/mostly-sunny.svg' %}" alt="Mostly sunny">
         <div>14&deg;</div>
       </div>
-      <div class="weather-by-hour__item">
-        <div class="weather-by-hour__hour">6am</div>
-        <img src="{% static 'icons/mostly-sunny.svg' %}" alt="Mostly sunny">
-        <div>16&deg;</div>
-      </div>
-      <div class="weather-by-hour__item">
-        <div class="weather-by-hour__hour">9am</div>
-        <img src="{% static 'icons/mostly-sunny.svg' %}" alt="Mostly sunny">
-        <div>17&deg;</div>
-      </div>
-      <div class="weather-by-hour__item">
-        <div class="weather-by-hour__hour">12pm</div>
-        <img src="{% static 'icons/mostly-sunny.svg' %}" alt="Mostly sunny">
-        <div>19&deg;</div>
-      </div>
-      <div class="weather-by-hour__item">
-        <div class="weather-by-hour__hour">3pm</div>
-        <img src="{% static 'icons/sunny.svg' %}" alt="Sunny">
-        <div>21&deg;</div>
-      </div>
-      <div class="weather-by-hour__item">
-        <div class="weather-by-hour__hour">6pm</div>
-        <img src="{% static 'icons/sunny.svg' %}" alt="Sunny">
-        <div>20&deg;</div>
-      </div>
-      <div class="weather-by-hour__item">
-        <div class="weather-by-hour__hour">9pm</div>
-        <img src="{% static 'icons/mostly-sunny.svg' %}" alt="Mostly sunny">
-        <div>18&deg;</div>
-      </div>
     </div>
   </div> {% endcomment %}
 
 
+
+<!-- 7days weather forcast  -->
   <div class="next-5-days">
     <h2 class="next-5-days__heading">Next 7 days</h2> 
+    <!-- for loop which loops 7 time -->
     {% for list in daily_weather %}
       <div class="next-5-days__container">
         <div class="next-5-days__row">
@@ -113,12 +100,12 @@
             </div>
 
             <div class="next-5-days__icon">
-              <img src="{% static 'icons/mostly-sunny.svg' %}" alt="{{list.4}}">
+              <img src= {{list.4}} alt="{{list.6}}">
             </div>
 
             <div class="next-5-days__rain">
-              {{list.3}}%
-              <div class="next-5-days__label">Rain</div>
+              {{list.3}}
+              <div class="next-5-days__label">UV Index</div>
             </div>
 
             <div class="next-5-days__wind">
@@ -127,11 +114,7 @@
             </div>
         </div>
       </div>
-    {% endfor %}
-
-      
-
-    
+    {% endfor %} 
   </div>
 
 </main>
